@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.fishlikewater</groupId>
         <artifactId>raiden-http</artifactId>
-        <version>${http.version}</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>raiden-spring-boot-test</artifactId>
     <name>raiden-spring-boot-test</name>
@@ -43,18 +43,16 @@
         </dependency>
     </dependencies>
 
-    <build>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <dependencyManagement>
+        <dependencies>
+            <!--springboot-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
